2014-02-27  Michael R. Crusoe <mcrusoe@msu.edu>

    * tagged: version 0.8
    * setup.py: Specify a known working version of setuptools so we don't
    force an unneeded and awkward upgrade.
    * setup.py: We aren't zipsafe, mark as such

2014-02-18  Michael R. Crusoe <mcrusoe@msu.edu>

* Normalized C++ namespace usage to fix CID 1054792
* Updated install instructions. We recommend OS X users and those Linux
users without root access to install virtualenv instead of pip.
* New documentation: doc/known-issues.txt
* Added code review checklist & other guidance: doc/development.txt

2014-02-03  Camille Scott <camille.scott.w@gmail.com>

* Standardized command line arguments in khmer_args; added version flag

* Added support for sparse graph labeling

* Added script to reinflate partitions from read files using the 
  labeling system, called sweep-reads-by-partition-buffered.py

* Implemented __new__ methods for Hashbits, enforced inheritance
  hierarchy between it and the new LabelHash class both in C++
  and CPython API

2013-12-20  Titus Brown  <titus@idyll.org>

* Fixed output_partitioned_file, sweep-reads3.py, and extract-partitions.py
  to retain FASTQ format in output.

2013-12-11  Michael R. Crusoe <mcrusoe@msu.edu>

* normalize-by-median.py: new optional argument: --record-filenames to specify
a path where a list of all the output filenames will be written to. Will
be used to better integrate with Galaxy.

* All commands that use the counting args now support the --version switch

* abundance-dist-single.py, abundance-dist.py, do-partition.py,
interleave-reads.py, load-graph.py, load-into-counting.py
normalize-by-median.py now exit with return code 1 instead of 255 as is
standard.

2013-12-19  Michael R. Crusoe  <mcrusoe@msu.edu>

* doc/install.txt Add setup instructions for RHEL6 & fix invocation to get
master branch to work for non-developers

2013-12-18  Titus Brown  <titus@idyll.org>
